--- a/php/P2/css/estilo.css
+++ b/php/P2/css/estilo.css
@@ -1,6 +1,6 @@
 body {
     font-family: arial;
-    background-image: url('../img/logo.png');
+    /*background-image: url('../img/logo.png');*/
     max-width: 1000px;
     margin: 0 auto;
     /* Centrado */
